# quad_feedback_linearization

./: .gitignore  README.md  derivations.py  dynamics.py  feedback_lin.py  geometry.py  params.py  plotting.py  pyproject.toml
